syntax = "proto3";

package suggester.service;


service ModelRequest {
  rpc GetComment (GetCommentRequest) returns (GetCommentResponse) {}
}

message GetCommentRequest {
  string pullRequestURL = 1;
  string pullRequestPatchURL = 2;
  string repoName = 3;
}

message GetCommentResponse {
  string pullRequestURL = 1;
  repeated FileNameLinePair fileNameLinePairs = 2;
  string message = 3;
}

message FileNameLinePair {
  string fileName = 1;
  int32 lineNumber = 2;
}